tests/NormalTests/paczka1/fuzzy1/62954150.err
Error in line 1: NsM47wF A349 30,6
Error in line 8: A349 A349 67,0
Error in line 30: IvQ19Is8yr S331 27,92
Error in line 20: wUCCKp6P S580 2,7
Error in line 37: VxYxfQET A349 96,35
